--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/carloscuesta/carloscuesta.me#readme",
   "dependencies": {
     "@headlessui/react": "1.7.14",
+    "@plaiceholder/next": "2.5.0",
     "@types/lodash.truncate": "4.4.7",
     "@vercel/analytics": "^1.0.1",
     "@vercel/kv": "0.1.2",
@@ -39,7 +40,6 @@
     "date-fns": "^2.30.0",
     "disqus-react": "^1.1.5",
     "gray-matter": "^4.0.3",
-    "lazysizes": "^5.3.2",
     "lodash.debounce": "^4.0.8",
     "lodash.groupby": "^4.6.0",
     "lodash.truncate": "4.4.2",
@@ -47,6 +47,7 @@
     "next-pwa": "^5.6.0",
     "next-seo": "^6.0.0",
     "next-themes": "0.2.1",
+    "plaiceholder": "2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
