--- a/package.json
+++ b/package.json
@@ -52,22 +52,22 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.2",
     "reading-time": "^1.5.0",
-    "rehype-autolink-headings": "^6.1.1",
+    "rehype-autolink-headings": "7.0.0",
     "rehype-external-links": "^3.0.0",
-    "rehype-preset-minify": "^6.0.0",
+    "rehype-preset-minify": "7.0.0",
     "rehype-prism-plus": "1.6.3",
     "rehype-slug": "^6.0.0",
-    "rehype-stringify": "^9.0.4",
+    "rehype-stringify": "10.0.0",
     "rehype-wrap-all": "^1.1.0",
-    "remark-gfm": "^3.0.1",
-    "remark-parse": "^10.0.2",
-    "remark-rehype": "^10.1.0",
+    "remark-gfm": "4.0.0",
+    "remark-parse": "11.0.0",
+    "remark-rehype": "11.0.0",
     "remark-toc": "^9.0.0",
     "satori": "0.10.4",
     "sharp": "0.32.6",
     "swr": "2.2.2",
     "tailwind-scrollbar-hide": "1.1.7",
-    "unified": "^10.1.2",
+    "unified": "11.0.3",
     "yarn": "1.22.19"
   },
   "devDependencies": {
