--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   "devDependencies": {
     "@lhci/cli": "^0.12.0",
     "@tailwindcss/typography": "0.5.9",
+    "@testing-library/react": "14.0.0",
     "@types/body-scroll-lock": "3.1.0",
     "@types/jest": "29.5.5",
     "@types/lodash.debounce": "4.0.7",
