--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:watch": "NODE_ENV=test TZ=UTC jest --watch",
     "test:coverage": "codecov",
     "test:lighthouse": "yarn run build && lhci autorun",
-    "postbuild": "cleancss public/prism.css -o public/prism.min.css && mv -f public/prism.min.css public/prism.css && rm -rf public/mockServiceWorker.js && next-sitemap",
+    "postbuild": "rm -rf public/mockServiceWorker.js && next-sitemap",
     "prepare": "husky install"
   },
   "repository": {
