--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "0.5.10",
     "react-test-renderer": "^18.2.0",
+    "sprinkles-vscode": "2.7.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
