--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "satori": "0.10.9",
     "sharp": "0.32.6",
     "shiki": "0.14.5",
+    "shikiji": "^0.9.0",
     "swr": "2.2.4",
     "tailwind-scrollbar-hide": "1.1.7",
     "unified": "11.0.4",
