--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "rehype-autolink-headings": "7.1.0",
     "rehype-external-links": "^3.0.0",
     "rehype-preset-minify": "7.0.0",
+    "rehype-pretty-code": "0.12.3",
     "rehype-prism-plus": "1.6.3",
     "rehype-slug": "^6.0.0",
     "rehype-stringify": "10.0.0",
@@ -65,6 +66,7 @@
     "remark-toc": "^9.0.0",
     "satori": "0.10.9",
     "sharp": "0.32.6",
+    "shikiji": "^0.9.0",
     "swr": "2.2.4",
     "tailwind-scrollbar-hide": "1.1.7",
     "unified": "11.0.4",
