--- a/package.json
+++ b/package.json
@@ -105,7 +105,8 @@
     "prettier-plugin-tailwindcss": "0.5.11",
     "react-test-renderer": "^18.2.0",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "vfile": "6.0.1"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
