--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "body-scroll-lock": "4.0.0-beta.0",
     "date-fns": "^3.3.1",
     "disqus-react": "^1.1.5",
+    "feed": "4.2.2",
     "gray-matter": "^4.0.3",
     "lodash.debounce": "^4.0.8",
     "lodash.groupby": "^4.6.0",
