--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,6 @@ jobs:
     - name: Tests ✅
       run: pnpm run test:unit
     - name: Upload Coverage 📈
-      run: pnpm run test:coverage
+      uses: codecov/codecov-action@v4
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
