--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lodash.groupby": "^4.6.0",
     "lodash.truncate": "4.4.2",
     "next": "14.2.14",
+    "next-mdx-remote": "5.0.0",
     "next-pwa": "^5.6.0",
     "next-seo": "^6.5.0",
     "next-themes": "0.3.0",
