--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "date-fns": "^4.1.0",
     "disqus-react": "^1.1.5",
     "feed": "4.2.2",
-    "gray-matter": "^4.0.3",
+    "gray-matter": "4.0.3",
     "lodash.groupby": "^4.6.0",
     "lodash.truncate": "4.4.2",
     "next": "14.2.14",
@@ -57,19 +57,15 @@
     "rehype-preset-minify": "7.0.0",
     "rehype-pretty-code": "0.14.0",
     "rehype-slug": "^6.0.0",
-    "rehype-stringify": "10.0.0",
     "rehype-wrap-all": "^1.1.0",
     "remark-gfm": "4.0.0",
-    "remark-parse": "11.0.0",
-    "remark-rehype": "11.1.0",
     "remark-toc": "^9.0.0",
     "satori": "0.10.13",
     "sharp": "0.32.6",
     "shiki": "1.15.2",
     "sprinkles-vscode": "2.7.0",
     "swr": "2.2.5",
-    "tailwind-scrollbar-hide": "1.1.7",
-    "unified": "11.0.5"
+    "tailwind-scrollbar-hide": "1.1.7"
   },
   "devDependencies": {
     "@lhci/cli": "^0.14.0",
