--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "rehype-external-links": "^3.0.0",
     "rehype-preset-minify": "7.0.0",
     "rehype-pretty-code": "0.14.0",
+    "rehype-probe-image-size": "1.0.0",
     "rehype-slug": "^6.0.0",
     "rehype-wrap-all": "^1.1.0",
     "remark-gfm": "4.0.0",
