--- a/package.json
+++ b/package.json
@@ -65,8 +65,7 @@
     "sharp": "0.32.6",
     "shiki": "1.15.2",
     "sprinkles-vscode": "2.7.0",
-    "swr": "2.2.5",
-    "tailwind-scrollbar-hide": "1.1.7"
+    "swr": "2.2.5"
   },
   "devDependencies": {
     "@lhci/cli": "^0.14.0",
