--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "Carlos Cuesta website.",
   "scripts": {
     "build": "next build",
-    "dev": "next",
+    "dev": "next dev --turbo",
     "start": "next start",
     "test": "pnpm run test:lint && pnpm run tscheck && pnpm run test:unit && pnpm run test:lighthouse",
     "tscheck": "pnpm tsc --noEmit",
@@ -41,14 +41,14 @@
     "gray-matter": "4.0.3",
     "lodash.groupby": "^4.6.0",
     "lodash.truncate": "4.4.2",
-    "next": "14.2.14",
+    "next": "15.0.0",
     "next-mdx-remote": "5.0.0",
     "next-pwa": "^5.6.0",
     "next-seo": "^6.5.0",
     "next-themes": "0.3.0",
     "plaiceholder": "2.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0-rc-65a56d0e-20241020",
+    "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "react-intersection-observer": "^9.13.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "7.1.0",
@@ -75,14 +75,14 @@
     "@types/body-scroll-lock": "3.1.2",
     "@types/jest": "29.5.13",
     "@types/lodash.groupby": "4.6.7",
-    "@types/react": "18.3.3",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-test-renderer": "18.0.7",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "autoprefixer": "10.4.20",
     "classix": "2.1.38",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.0.4",
+    "eslint-config-next": "15.0.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-typescript": "3.6.3",
@@ -226,5 +226,10 @@
     "semi": false,
     "singleQuote": true
   },
-  "packageManager": "pnpm@9.1.4"
+  "packageManager": "pnpm@9.1.4",
+  "pnpm": {
+    "overrides": {
+      "@types/react": "npm:types-react@19.0.0-rc.1"
+    }
+  }
 }
