--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
     "next-env.d.ts",
     "src/**/*.ts",
     "src/**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "./jest.setup.ts"
   ],
   "exclude": [
     "node_modules"
