--- a/package.json
+++ b/package.json
@@ -30,8 +30,12 @@
   "homepage": "https://github.com/carloscuesta/carloscuesta.me#readme",
   "dependencies": {
     "@headlessui/react": "2.0.4",
+    "@mdx-js/loader": "3.1.0",
+    "@mdx-js/react": "3.1.0",
+    "@next/mdx": "15.0.1",
     "@plaiceholder/next": "2.5.0",
     "@types/lodash.truncate": "4.4.9",
+    "@types/mdx": "2.0.13",
     "@vercel/analytics": "^1.3.1",
     "@vercel/kv": "0.2.2",
     "@vercel/speed-insights": "1.0.12",
