--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
     "rehype-probe-image-size": "1.0.0",
     "rehype-slug": "^6.0.0",
     "rehype-wrap-all": "^1.1.0",
+    "remark-frontmatter": "5.0.0",
     "remark-gfm": "4.0.0",
+    "remark-mdx-frontmatter": "5.0.0",
     "remark-toc": "^9.0.0",
     "satori": "0.10.13",
     "sharp": "0.32.6",
