--- a/package.json
+++ b/package.json
@@ -218,7 +218,7 @@
       "eslint --cache --fix",
       "prettier --write"
     ],
-    "src/**/*.{css,md}": [
+    "src/**/*.{css,md,mdx}": [
       "prettier --write"
     ]
   },
