--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "Carlos Cuesta website.",
   "scripts": {
     "build": "next build",
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "start": "next start",
     "test": "pnpm run test:lint && pnpm run tscheck && pnpm run test:unit && pnpm run test:lighthouse",
     "tscheck": "pnpm tsc --noEmit",
@@ -30,27 +30,27 @@
   "homepage": "https://github.com/carloscuesta/carloscuesta.me#readme",
   "dependencies": {
     "@headlessui/react": "2.0.4",
+    "@mdx-js/loader": "3.1.0",
+    "@mdx-js/react": "3.1.0",
+    "@next/mdx": "15.0.1",
     "@plaiceholder/next": "2.5.0",
     "@types/lodash.truncate": "4.4.9",
+    "@types/mdx": "2.0.13",
     "@vercel/analytics": "^1.3.1",
     "@vercel/kv": "0.2.2",
     "@vercel/speed-insights": "1.0.12",
     "body-scroll-lock": "4.0.0-beta.0",
     "date-fns": "^4.1.0",
     "feed": "4.2.2",
-    "gray-matter": "4.0.3",
     "lodash.groupby": "^4.6.0",
     "lodash.truncate": "4.4.2",
     "next": "15.0.0",
-    "next-mdx-remote": "5.0.0",
     "next-pwa": "^5.6.0",
     "next-seo": "^6.5.0",
     "next-themes": "0.3.0",
     "plaiceholder": "2.5.0",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
-    "react-intersection-observer": "^9.13.0",
-    "reading-time": "^1.5.0",
     "rehype-autolink-headings": "7.1.0",
     "rehype-external-links": "^3.0.0",
     "rehype-preset-minify": "7.0.0",
@@ -58,7 +58,10 @@
     "rehype-probe-image-size": "1.0.0",
     "rehype-slug": "^6.0.0",
     "rehype-wrap-all": "^1.1.0",
+    "remark-frontmatter": "5.0.0",
     "remark-gfm": "4.0.0",
+    "remark-mdx-frontmatter": "5.0.0",
+    "remark-reading-time": "2.0.1",
     "remark-toc": "^9.0.0",
     "satori": "0.10.13",
     "sharp": "0.32.6",
@@ -215,7 +218,7 @@
       "eslint --cache --fix",
       "prettier --write"
     ],
-    "src/**/*.{css,md}": [
+    "src/**/*.{css,md,mdx}": [
       "prettier --write"
     ]
   },
