--- a/package.json
+++ b/package.json
@@ -104,8 +104,7 @@
     "tailwind-merge": "2.5.2",
     "tailwindcss": "3.4.4",
     "typescript": "5.4.5",
-    "uglify-js": "3.19.3",
-    "vfile": "6.0.2"
+    "uglify-js": "3.19.3"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
