--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   },
   "homepage": "https://github.com/carloscuesta/carloscuesta.me#readme",
   "dependencies": {
-    "@headlessui/react": "2.2.0",
     "@codesandbox/sandpack-react": "2.19.10",
+    "@headlessui/react": "2.2.0",
     "@mdx-js/loader": "3.1.0",
     "@mdx-js/react": "3.1.0",
     "@next/mdx": "15.0.2",
@@ -45,13 +45,13 @@
     "feed": "4.2.2",
     "lodash.groupby": "^4.6.0",
     "lodash.truncate": "4.4.2",
-    "next": "15.0.0",
+    "next": "15.1.0",
     "next-pwa": "^5.6.0",
     "next-seo": "^6.5.0",
     "next-themes": "0.4.4",
     "plaiceholder": "2.5.0",
-    "react": "19.0.0-rc-65a56d0e-20241020",
-    "react-dom": "19.0.0-rc-65a56d0e-20241020",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "rehype-autolink-headings": "7.1.0",
     "rehype-external-links": "^3.0.0",
     "rehype-preset-minify": "7.0.1",
