--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
   },
   "devDependencies": {
     "@lhci/cli": "^0.14.0",
+    "@tailwindcss/postcss": "4.0.0",
     "@tailwindcss/typography": "0.5.15",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
@@ -82,7 +83,6 @@
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
-    "autoprefixer": "10.4.20",
     "classix": "2.2.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "15.1.4",
@@ -101,9 +101,9 @@
     "next-sitemap": "^4.2.3",
     "postcss": "8.4.49",
     "prettier": "3.4.2",
-    "prettier-plugin-tailwindcss": "0.6.9",
+    "prettier-plugin-tailwindcss": "0.6.11",
     "tailwind-merge": "2.6.0",
-    "tailwindcss": "3.4.4",
+    "tailwindcss": "4.0.0",
     "typescript": "5.7.2",
     "uglify-js": "3.19.3"
   },
