--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "remark-reading-time": "2.0.1",
     "remark-toc": "^9.0.0",
     "satori": "0.12.1",
-    "sharp": "0.32.6",
+    "sharp": "0.33.5",
     "shiki": "1.24.0",
     "sprinkles-vscode": "2.7.0",
     "swr": "2.2.5"
@@ -227,10 +227,5 @@
     "semi": false,
     "singleQuote": true
   },
-  "packageManager": "pnpm@9.1.4",
-  "pnpm": {
-    "overrides": {
-      "@types/react": "npm:types-react@19.0.0-rc.1"
-    }
-  }
+  "packageManager": "pnpm@10.0.0"
 }
